syntax = "proto3";

package com.mechjacktv.mechjackbot.command.caster;

message CasterKey {
  string name = 1;
}

message Caster {
  string name = 1;
  int64 last_shout_out = 2;
}
